--- a/package.json
+++ b/package.json
@@ -26,12 +26,17 @@
     "url": "https://github.com/BizShuk/podcast_p/issues"
   },
   "homepage": "https://github.com/BizShuk/podcast_p#readme",
+  "server": {
+    "port": 7000
+  },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "jquery": "^3.1.1"
   },
   "dependencies": {
     "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0"
+    "babel-preset-react": "^6.16.0",
+    "mongo": "^0.1.0",
+    "mysql": "^2.12.0"
   }
 }
